--- a/bootcamp/core/static/css/cover.css
+++ b/bootcamp/core/static/css/cover.css
@@ -13,7 +13,7 @@ body {
 }
 
 .logo {
-  margin: 0;
+  margin: 10px;
   font-size: 3em;
   font-weight: 200;
   font-family: "Audiowide", cursive;
@@ -21,6 +21,12 @@ body {
   text-align: center;
   text-shadow: 1px 1px 0 #333333;
   line-height: 70px;
+  padding: 10px;
+}
+
+.mined-logo {
+    width: 8%;
+    height: auto;
 }
 
 .login {
