--- a/bootcamp/core/templates/core/cover.html
+++ b/bootcamp/core/templates/core/cover.html
@@ -3,44 +3,49 @@
 {% load i18n %}
 
 {% block head %}
-  <link href="{% static 'css/cover.css' %}" rel="stylesheet">
+<link href="{% static 'css/cover.css' %}" rel="stylesheet">
 {% endblock head %}
 
 {% block body %}
-  <a href="http://mined.gatech.edu/"><img style="position: absolute; top: 0; right: 0; border: 0;" src="{% static 'img/MINEDlogo.png' %}"></a>
-  <div class="cover">
+<div class="logo">
+    <img class="gt-logo" src="{% static 'img/gt_logo_white.svg' %}">
+    <a href="http://mined.gatech.edu/"><img class="mined-logo"
+                                        src="{% static 'img/MINEDlogo.png' %}"></a>
+</div>
+<div class="cover">
+    <br>
     <h1 class="logo">Equipment Lab Automation</h1>
     {% if form.non_field_errors %}
-      {% for error in form.non_field_errors %}
-        <div class="alert alert-danger alert-dismissable">
-          <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
-          {{ error }}
-        </div>
-      {% endfor %}
+    {% for error in form.non_field_errors %}
+    <div class="alert alert-danger alert-dismissable">
+        <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
+        {{ error }}
+    </div>
+    {% endfor %}
     {% endif %}
     <div class="login">
-      <h2>{% trans 'Log in' %}</h2>
-      <form method="post" action="{% url 'login' %}" role="form">
-        {% csrf_token %}
-        <div class="form-group{% if form.username.errors %} has-error{% endif %}">
-          <label for="username">{% trans 'Username' %}</label>
-          <input type="text" class="form-control" id="username" name="username">
-          {% for error in form.username.errors %}
-            <label class="control-label">{{ error }}</label>
-          {% endfor %}
-        </div>
-        <div class="form-group{% if form.password.errors %} has-error{% endif %}">
-          <label for="password">{% trans 'Password' %}</label>
-          <input type="password" class="form-control" id="password" name="password">
-          {% for error in form.password.errors %}
-            <label class="control-label">{{ error }}</label>
-          {% endfor %}
-        </div>
-        <div class="form-group">
-          <button type="submit" class="btn btn-default">{% trans 'Log in' %}</button>
-          <a href="{% url 'signup' %}" class="btn btn-link">{% trans 'Sign up for Equipment Lab Automation' %}</a>
-        </div>
-      </form>
+        <h2>{% trans 'Log in' %}</h2>
+        <form method="post" action="{% url 'login' %}" role="form">
+            {% csrf_token %}
+            <div class="form-group{% if form.username.errors %} has-error{% endif %}">
+                <label for="username">{% trans 'Username' %}</label>
+                <input type="text" class="form-control" id="username" name="username">
+                {% for error in form.username.errors %}
+                <label class="control-label">{{ error }}</label>
+                {% endfor %}
+            </div>
+            <div class="form-group{% if form.password.errors %} has-error{% endif %}">
+                <label for="password">{% trans 'Password' %}</label>
+                <input type="password" class="form-control" id="password" name="password">
+                {% for error in form.password.errors %}
+                <label class="control-label">{{ error }}</label>
+                {% endfor %}
+            </div>
+            <div class="form-group">
+                <button type="submit" class="btn btn-default">{% trans 'Log in' %}</button>
+                <a href="{% url 'signup' %}" class="btn btn-link">{% trans 'Sign up for Equipment Lab Automation' %}</a>
+            </div>
+        </form>
     </div>
-  </div>
+</div>
 {% endblock body %}
