--- a/bootcamp/projects/templates/projects/project.html
+++ b/bootcamp/projects/templates/projects/project.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 {% load staticfiles %}
 {% load i18n %}
+{% load online_status_tags %}
 
 {% block title %}{{ project.title }}{% endblock %}
 
@@ -46,23 +47,28 @@
     <div id="details" class="container">
         <div class="row">
             <div class="col-md-12">
-                <h2>Project Description</h2>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-md-12">
                 <h3>{{ project.description }}</h3>
             </div>
         </div>
     </div>
-
+    <br/>
+    <div class="row">
+        {% if project.get_tags %}
+        <div class="tags">
+            {% for tag in project.get_tags %}
+            <a href="{% url 'tag' tag.tag %}"><span class="label label-default">{{ tag }}</span></a>
+            {% endfor %}
+        </div>
+        {% endif %}
+    </div>
+    <br>
     <div class="row">
         <div class="col-md-8">
             <div class="row">
                 <div id="devices">
                     <h2>Device list</h2>
                      <div class="table-responsive">
-                      <table class="table">
+                      <table class="table table-striped table-bordered">
                             <tr>
                                 <th>Device Name</th>
                                 <th>Device ID</th>
@@ -82,7 +88,7 @@
                 <div id="samples">
                     <h2>Samples</h2>
                      <div class="table-responsive">
-                      <table class="table">
+                      <table class="table table-striped table-bordered">
                             <tr>
                                 <th>Sample Name </th>
                                 <th>Sample ID </th>
@@ -104,7 +110,7 @@
             <div id="collaborators">
                 <h2>Collaborators</h2>
                  <div class="table-responsive">
-                  <table class="table">
+                  <table class="table table-striped table-bordered">
                         <tr>
                             <th>Name</th>
                             <th>Institute</th>
@@ -112,7 +118,7 @@
                         {% for each in project.get_collaborators %}
                             <tr>
                                 <td><a href="{% url 'profile' each.user.username %}">{{ each.user.profile.get_screen_name }}</a></td>
-                                <td><div class="led_green"></div></td>
+                                <td>{{each.user.profile.institution}}</td>
                             </tr>
                         {% endfor %}
                   </table>
@@ -121,15 +127,6 @@
         </div>
     </div>
 
-    <div class="row">
-        {% if project.get_tags %}
-        <div class="tags">
-            {% for tag in project.get_tags %}
-            <a href="{% url 'tag' tag.tag %}"><span class="label label-default">{{ tag }}</span></a>
-            {% endfor %}
-        </div>
-        {% endif %}
-    </div>
 </div>
 
 
