--- a/bootcamp/projects/templates/projects/projects.html
+++ b/bootcamp/projects/templates/projects/projects.html
@@ -60,24 +60,14 @@ $(document).ready(function() {
       <section class="projects">
       <br><br>
       {% if projects|length != 0 %}
+          <div class="projects">
+
+          </div>
       	<table id="example" class="table table-striped table-bordered" cellspacing="0" width="100%">
-      <thead>
-            <tr>
-                <th>Name</th>
-                <th>Short Description</th>
-                <th>Collaborators</th>
-                <th>Tags</th>
-                <th>Created By</th>
-                <th>Last Modified</th>
-                <th>Comments</th>
-                <th><span class="glyphicon glyphicon-pencil"></span></th>
-            </tr>
-        </thead>
         <tbody>
         {% for project in projects %}
           {% include 'projects/partial_project_table.html' with project=project %}
         {% endfor %}
-        
         </tbody>
       </table>
       {% else %}
@@ -91,6 +81,12 @@ $(document).ready(function() {
       <h4>{% trans 'Popular Tags' %}</h4>
       {% for tag, count in popular_tags %}
         <a href="{% url 'tag' tag %}"><span class="label label-default">{{ count }} {{ tag }}</span></a>
+      {% endfor %}
+    </div>
+     <div class="col-md-2 popular-tags">
+      <h4>{% trans 'Popular Authors' %}</h4>
+      {% for author, count in popular_authors %}
+        <a href="{% url 'author' author.username %}"><span class="label label-default"> {{ author.profile.get_screen_name }}</span></a><br/>
       {% endfor %}
     </div>
   </div>
